<resources>
    <string name="app_name">EXPOTEC</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_calendar">Teste</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="info_splash">CARREGANDO...</string>
    <string name="info_design">Logo and Splash Screen Designed by Adriano de Lima</string>
    <string name="endereco_site">WWW.EXPOTEC.ORG.BR</string>
    <string name="divisao_horarios">às</string>
    <string name="texto1_sobre">Agenda do evento Expotec</string>
    <string name="texto2_sobre">Acontece em João Pessoa entre os dias 27 e 30 de maio de 2015</string>
    <string name="texto3_sobre">
Desenvolvido por <b>João Neto</b>, como trabalho de conclusão de curso do curso de android do GDG João Pessoa
    </string>
    <string name="title_activity_texto_agenda">Agenda</string>
    <string name="action_settings">Settings</string>
</resources>
